# mygameproject3

./: .gitignore  Dockerfile  README.md
.github/: docker-image.yml
Server/Src/: CMakeCache.txt  CMakeLists.txt  Makefile  buildall.sh  cmake_install.cmake
Server/Src/AccountServer/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
Server/Src/CenterServer/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
Server/Src/DBServer/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
Server/Src/GameServer/: CMakeLists.txt  GameServer.vcxproj  Makefile  cmake_install.cmake  makefile
Server/Src/Linux/: linux_build.md  startserver.sh  stopserver.sh
Server/Src/LogServer/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
Server/Src/LogicServer/: CMakeLists.txt  LogicServer.vcxproj  Lua_Script.h  Makefile  cmake_install.cmake  makefile
Server/Src/LoginServer/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
Server/Src/Message/: Msg_Account.pb.h  Msg_Base.pb.h  Msg_Copy.pb.h  Msg_Game.pb.h  Msg_LoginCltData.pb.h  Msg_LoginDBData.pb.h  Msg_RetCode.pb.h  Msg_Role.pb.h
Server/Src/ProxyServer/: Makefile  cmake_install.cmake
Server/Src/ServerEngine/: AVLTree.h  CMakeCache.txt  CMakeLists.txt  CommonTime.cpp  LuaManager.h  Makefile  NetManager.cpp  ServerEngine.vcxproj  SpinLock.h  cmake_install.cmake  makefile  stdafx.h
Server/Src/ServerEngine_asio/: ServerEngine_asio.vcxproj  makefile
Server/Src/ServerEngine_libuv/: ServerEngine_libuv.vcxproj
Server/Src/WatchServer/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
(+14 files in other folders)
